[tool.poetry]
name = "jsonpath-ng"
version = "2.0.0-dev1"
description = ""
authors = ["Tomas Aparicio <tomas@aparicio.me>", "Tomek Bsc <tomek.prezes@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "jsonpath_ng"}]

[tool.poetry.dependencies]
python = "^3.7.2"
ply = "^3.11"
six = "^1.16.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
